2007-02-09  Zack Weinberg  <zackw@panix.com>

	* cmd_ws_commit.cc (revert): Remove the remaining use of
	get_revision_id.

	* cmd_files.cc (cat, automate get_file_of): Fail gracefully in a
	two-parent workspace, unless given -r.
	* tests/two_parent_workspace_commands_that_fail: Test them.

2007-02-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* work.cc (maybe_update_inodeprints): Update for multi-parent
	workspace.
	* tests/two_parent_workspace_inodeprints: New test.
	* testsuite.lua: Add it.

2007-02-09  Zack Weinberg  <zackw@panix.com>

	* tests/workspace_migration: Generalize to support different sorts
	of migration-needing workspaces.  Add new "inodeprints" and
	"twoparent" tests.

	* cmd_list.cc (ls_known, ls_changed): Work in a two-parent workspace.
	* tests/two_parent_workspace_list: New test.
	* testsuite.lua: Add it.

	* automate.cc (attributes): Fail gracefully in a two-parent workspace.
	* tests/two_parent_workspace_commands_that_fail: Add test for
	automate attributes.

	* cmd_files.cc (log): Work in a two-parent workspace.
	* tests/merge_into_workspace: Augment with tests for log.

	* cmd_files.cc (annotate): Handle multi-parent workspaces gracefully.
	Add lengthy comment about why multi-parent annotate doesn't work.
	* tests/two_parent_workspace_annotate: New xfailed test.
	* testsuite.lua: Update.

2007-02-07  Zack Weinberg  <zackw@panix.com>

	* work.cc (perform_rename): Work in a two-parent workspace.
	(perform_pivot_root): Likewise.
	* tests/two_parent_workspace_add_drop: Rename to...
	* tests/two_parent_workspace_add_drop_rename: ... this.
	Add testing of renames.
	* tests/two_parent_workspace_pivot_root: New test.
	* testsuite.lua: Update.

2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* work.cc (workspace::perform_additions,
	workspace::perform_deletions): Update to deal with multi-parent
	workspaces.
	* tests/two_parent_workspace_add_drop: New test.
	* testsuite.lua: Add it.

2007-02-07  Zack Weinberg  <zackw@panix.com>
